# VirtualSpaceMeshnet

./: .gitmodules  CMakeLists.txt  autoformat.sh  gengraph.sh  genmsgs.sh  gvconvert.sh  msg_types.fbs  node.cpp  zmq_timers.hpp
include/: zmq_timers.hpp
include/vsm/: ego_sphere.hpp  graphviz.hpp  logger.hpp  mesh_node.hpp  msg_types_generated.h  node.hpp  peer_manager.hpp  peer_tracker.hpp  quick_hull.hpp  time_sync.hpp  transport.hpp  transport_interface.hpp  zmq_timers.hpp  zmq_transport.hpp
include/vsmn/: msg_types_generated.h
src/: ego_sphere.cpp  mesh_node.cpp  node.cpp  peer_manager.cpp  peer_tracker.cpp  quick_hull.cpp  zmq_transport.cpp
test/: test_dummy.cpp  test_ego_sphere.cpp  test_logger.cpp  test_main.cpp  test_mesh_node.cpp  test_peer_manager.cpp  test_peer_tracker.cpp  test_quick_hull.cpp  test_zmq_transport.cpp
